--- a/src/components/sbb-checkbox-group/sbb-checkbox-group.scss
+++ b/src/components/sbb-checkbox-group/sbb-checkbox-group.scss
@@ -10,11 +10,25 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
   --sbb-checkbox-group-gap: var(--sbb-spacing-fixed-6x);
 }
 
+:host([orientation='vertical']) {
+  --sbb-checkbox-group-orientation: column;
+  --sbb-checkbox-group-gap: var(--sbb-spacing-fixed-3x);
+
+  ::slotted(sbb-checkbox) {
+    width: 100%;
+  }
+}
+
 @each $breakpoint in $breakpoints {
   @include mq($from: #{$breakpoint}) {
     // horizontal-from overrides orientation vertical
     :host([orientation='vertical'][horizontal-from='#{$breakpoint}']) {
       --sbb-checkbox-group-orientation: row;
+      --sbb-checkbox-group-gap: var(--sbb-spacing-fixed-6x);
+
+      ::slotted(sbb-checkbox) {
+        width: auto;
+      }
     }
   }
 }
@@ -25,17 +39,8 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
   flex-direction: var(--sbb-checkbox-group-orientation);
   align-items: var(--sbb-checkbox-group-align-items);
   gap: var(--sbb-checkbox-group-gap);
-}
 
-:host([orientation='vertical']) {
-  --sbb-checkbox-group-orientation: column;
-  --sbb-checkbox-group-gap: var(--sbb-spacing-fixed-3x);
-
-  ::slotted(sbb-checkbox) {
-    width: 100%;
-  }
-
-  .sbb-checkbox-group {
+  :host([orientation='vertical']) & {
     width: 100%;
   }
 }
