--- a/src/components/sbb-radio-button-group/sbb-radio-button-group.scss
+++ b/src/components/sbb-radio-button-group/sbb-radio-button-group.scss
@@ -6,12 +6,12 @@
   display: flex;
   gap: var(--sbb-spacing-fixed-6x);
   width: max-content;
-}
 
-:host([orientation='vertical']) .sbb-radio-group {
-  flex-direction: column;
-  align-items: flex-start;
-  gap: var(--sbb-spacing-fixed-3x);
+  :host([orientation='vertical']) & {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: var(--sbb-spacing-fixed-3x);
+  }
 }
 
 .sbb-radio-group__error {
