--- a/src/components/sbb-radio-button/sbb-radio-button.scss
+++ b/src/components/sbb-radio-button/sbb-radio-button.scss
@@ -3,10 +3,11 @@
 @include host-component-properties;
 
 :host {
-  --sbb-radio-button-size: calc(var(--sbb-spacing-fixed-6x) - var(--sbb-border-width-1x) * 2);
   --sbb-radio-button-label-color: var(--color-black-default);
   --sbb-radio-button-checked-color: var(--sbb-color-red-default);
+  --sbb-radio-button-border: var(--sbb-border-width-1x);
   --sbb-radio-button-border-radius: var(--sbb-border-radius-8x);
+  --sbb-radio-button-size: calc(var(--sbb-spacing-fixed-6x) - var(--sbb-radio-button-border) * 2);
 
   // Align radio button to the first row of the label based on the line-height so that it's vertically
   // aligned to the label and sticks to the top if the label breaks into multiple lines
@@ -19,7 +20,7 @@
   --sbb-focus-outline-offset: var(--sbb-spacing-fixed-1x);
   @include focusOutline;
 
-  border-radius: #{px-to-rem-build(0.25)};
+  border-radius: 0.25px;
 }
 
 :host([data-disabled]),
@@ -29,12 +30,12 @@
 }
 
 /* HTML5 Boilerplate accessible hidden styles */
-[type='radio'] {
+.sbb-radio-button {
   @include screenReaderOnly;
 }
 
 /* One radio button per line */
-label {
+.sbb-radio-button__label {
   @include text-m--regular;
 
   cursor: pointer;
@@ -46,30 +47,45 @@ label {
   :host([size='s']) & {
     @include text-s--regular;
   }
+
+  :host([data-disabled]) &,
+  :host([disabled]) & {
+    cursor: default;
+  }
 }
 
-[type='radio'] + span {
+.sbb-radio-button__label-slot {
   display: flex;
   align-items: flex-start;
 }
 
 /* unchecked style */
-[type='radio'] + span::before {
+.sbb-radio-button__label-slot::before {
   content: '';
   flex-shrink: 0;
   width: var(--sbb-radio-button-size);
   height: var(--sbb-radio-button-size);
   background: var(--sbb-radio-button-checked-color);
   border-radius: var(--sbb-radio-button-border-radius);
+
+  // The border was used to generate the animation of the radio-button,
+  // consequently the box-shadow was used as the actual border of the radio.
   border: calc(var(--sbb-radio-button-size) / 2) solid var(--sbb-color-white-default);
-  box-shadow: 0 0 0 var(--sbb-border-width-1x) var(--sbb-color-smoke-default);
-  margin-inline-end: calc(var(--sbb-spacing-fixed-2x) + var(--sbb-border-width-1x));
-  margin-inline-start: var(--sbb-border-width-1x);
+  box-shadow: 0 0 0 var(--sbb-radio-button-border) var(--sbb-color-smoke-default);
+  margin-inline-end: calc(var(--sbb-spacing-fixed-2x) + var(--sbb-radio-button-border));
+  margin-inline-start: var(--sbb-radio-button-border);
   margin-block-start: var(--sbb-radio-button-icon-align);
   transition: border var(--sbb-animation-duration-4x) ease;
+
+  :host([data-disabled]) &,
+  :host([disabled]) & {
+    @include ifForcedColors {
+      border-color: GrayText;
+    }
+  }
 }
 
 /* the checked style using the :checked pseudo class */
-[type='radio']:checked + span::before {
+.sbb-radio-button:checked + .sbb-radio-button__label-slot::before {
   border-width: #{px-to-rem-build(6)};
 }
