--- a/src/components/sbb-form-field/sbb-form-field.scss
+++ b/src/components/sbb-form-field/sbb-form-field.scss
@@ -162,7 +162,7 @@ slot[name='label'] > span {
 
 // Input
 /* stylelint-disable plugin/stylelint-bem-namics */
-.form-field__input ::slotted(:where(input, select, sbb-slider)) {
+.form-field__input ::slotted(:where(input, select)) {
   @include text-m--regular;
   @include placeholder;
   @include ellipsis;
