--- a/src/components/sbb-signet/sbb-signet.scss
+++ b/src/components/sbb-signet/sbb-signet.scss
@@ -3,20 +3,25 @@
 @include host-component-properties;
 
 :host {
-  // Default Signet Styles
-  // ----------------------------------------------
   --sbb-signet-background-color: var(--sbb-color-red-default);
   --sbb-signet-icon-color: var(--sbb-color-white-default);
+  --sbb-signet-aspect-ratio: 2 / 1;
+  --sbb-signet-svg-container-height: auto;
 
-  // Forced Colors Variant
-  // ----------------------------------------------
   @include ifForcedColors {
-    .sbb-signet--default,
-    .sbb-signet--white-on-black {
-      --sbb-signet-background-color: ButtonText;
-      --sbb-signet-icon-color: Canvas;
-    }
+    --sbb-signet-background-color: ButtonText !important;
+    --sbb-signet-icon-color: Canvas !important;
   }
+}
+
+:host([protective-room='minimal']) {
+  --sbb-signet-aspect-ratio: 108 / 64;
+  --sbb-signet-svg-container-height: calc(44 / 64 * 100%);
+}
+
+:host([protective-room='ideal']) {
+  --sbb-signet-aspect-ratio: 128 / 84;
+  --sbb-signet-svg-container-height: calc(44 / 84 * 100%);
 }
 
 .sbb-signet {
@@ -24,49 +29,21 @@
   align-items: center;
   justify-content: center;
   background-color: var(--sbb-signet-background-color);
+  aspect-ratio: var(--sbb-signet-aspect-ratio);
+  @include stretch('height');
+  @include stretch('width');
 }
 
-.sbb-signet .sbb-signet__svg {
-  aspect-ratio: 2/1; // No Fallback for now...
-  width: 100%;
-  height: auto;
-
-  // @TODO check what triggers to break the signet through border-box model
-  box-sizing: content-box;
+.sbb-signet .sbb-signet__svg-container {
+  display: flex;
+  height: var(--sbb-signet-svg-container-height);
 }
 
 .sbb-signet svg {
-  float: inline-start;
-}
-
-.sbb-signet--protective-room-ideal .sbb-signet__svg {
-  padding: 16.6666666667%;
-}
-
-.sbb-signet--protective-room-minimal .sbb-signet__svg {
-  padding: 10%;
-}
-
-.sbb-signet--protective-room-align-right .sbb-signet__svg {
-  padding-block-start: 4.166666666667%;
-  padding-inline-end: 4.166666666667%;
-  padding-block-end: 4.166666666667%;
-  padding-inline-start: 50%;
-}
-
-.sbb-signet--protective-room-align-bottom-right .sbb-signet__svg {
-  padding-block-start: 18%;
-  padding-inline-end: 7.5%;
-  padding-block-end: 9%;
-  padding-inline-start: 75%;
+  width: 100%;
+  height: 100%;
 }
 
 #sbb-signet__icon {
   fill: var(--sbb-signet-icon-color);
-}
-
-// White on Black Variant
-// ----------------------------------------------
-.sbb-signet--white-on-black {
-  --sbb-signet-background-color: var(--sbb-color-black-default);
 }
