--- a/src/components/sbb-radio-button-group/sbb-radio-button-group.scss
+++ b/src/components/sbb-radio-button-group/sbb-radio-button-group.scss
@@ -18,6 +18,7 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
   display: flex;
   flex-direction: var(--sbb-radio-button-group-orientation);
   gap: var(--sbb-radio-button-group-gap);
+  align-items: flex-start;
   width: max-content;
 }
 
