fix: rename attributes, remove hostContext check

--- a/src/components/sbb-checkbox/sbb-checkbox.scss
+++ b/src/components/sbb-checkbox/sbb-checkbox.scss
@@ -17,7 +17,7 @@
   }
 }
 
-:host([data-disabled]),
+:host([data-group-disabled]),
 :host([disabled]) {
   --sbb-checkbox-color: var(--sbb-color-graphite-default);
   --sbb-checkbox-border-color: var(--sbb-color-graphite-default);
