fix: set color in button-reset mixin to avoid iOS blue color

--- a/src/components/sbb-card/sbb-card.scss
+++ b/src/components/sbb-card/sbb-card.scss
@@ -96,6 +96,7 @@
     -webkit-appearance: none;
     -moz-appearance: none;
     -webkit-tap-highlight-color: transparent;
+    color: inherit;
   }
 }
 
