feat: added size prop

--- a/src/components/sbb-toggle/sbb-toggle.scss
+++ b/src/components/sbb-toggle/sbb-toggle.scss
@@ -3,6 +3,8 @@
 @include host-component-properties;
 
 .sbb-toggle {
+  @include text-m--regular;
+
   position: relative;
   display: flex;
   justify-content: center;
