--- a/src/components/sbb-radio-button-group/sbb-radio-button-group.scss
+++ b/src/components/sbb-radio-button-group/sbb-radio-button-group.scss
@@ -2,16 +2,29 @@
 // travel the shadow boundary are defined through this mixin
 @include host-component-properties;
 
+@mixin horizontal-orientation {
+  --sbb-radio-button-group-orientation: row;
+  --sbb-radio-button-group-gap: var(--sbb-spacing-fixed-6x);
+}
+
 $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
 
 :host {
-  --sbb-radio-button-group-orientation: row;
-  --sbb-radio-button-group-gap: var(--sbb-spacing-fixed-6x);
+  @include horizontal-orientation;
 }
 
 :host([orientation='vertical']) {
   --sbb-radio-button-group-orientation: column;
   --sbb-radio-button-group-gap: var(--sbb-spacing-fixed-3x);
+}
+
+@each $breakpoint in $breakpoints {
+  @include mq($from: #{$breakpoint}) {
+    // horizontal-from overrides orientation vertical
+    :host([orientation='vertical'][horizontal-from='#{$breakpoint}']) {
+      @include horizontal-orientation;
+    }
+  }
 }
 
 .sbb-radio-group {
@@ -27,14 +40,4 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
 
   display: inline-block;
   margin-block-start: var(--sbb-spacing-fixed-1x);
-}
-
-@each $breakpoint in $breakpoints {
-  @include mq($from: #{$breakpoint}) {
-    // horizontal-from overrides orientation vertical
-    :host([orientation='vertical'][horizontal-from='#{$breakpoint}']) {
-      --sbb-radio-button-group-orientation: row;
-      --sbb-radio-button-group-gap: var(--sbb-spacing-fixed-6x);
-    }
-  }
 }
