--- a/src/components/sbb-radio-button/sbb-radio-button.scss
+++ b/src/components/sbb-radio-button/sbb-radio-button.scss
@@ -28,12 +28,11 @@
   --sbb-radio-button-checked-color: var(--sbb-color-graphite-default);
 }
 
-/* HTML5 Boilerplate accessible hidden styles */
 .sbb-radio-button__input {
   @include screenReaderOnly;
 }
 
-/* One radio button per line */
+// One radio button per line
 .sbb-radio-button {
   @include text-m--regular;
 
@@ -57,7 +56,7 @@
   display: flex;
   align-items: flex-start;
 
-  /* Unchecked style */
+  // Unchecked style
   &::before {
     content: '';
     flex-shrink: 0;
@@ -84,7 +83,7 @@
   }
 }
 
-/* The checked style using the :checked pseudo class */
+// The checked style using the :checked pseudo class
 .sbb-radio-button__input:checked + .sbb-radio-button__label-slot::before {
   border-width: #{px-to-rem-build(6)};
 }
