feat: toggle css

--- a/src/components/sbb-toggle-option/sbb-toggle-option.scss
+++ b/src/components/sbb-toggle-option/sbb-toggle-option.scss
@@ -58,14 +58,27 @@ sbb-icon,
 .sbb-toggle-option {
   @include text-xs--regular;
 
+  --sbb-toggle-option-text-color: var(--sbb-color-anthracite-default);
+
   display: flex;
+  cursor: pointer;
   padding-inline: var(--sbb-spacing-responsive-xxxs);
   padding-block: var(--sbb-spacing-fixed-1x);
   border-radius: var(--sbb-border-radius-8x);
+  color: var(--sbb-toggle-option-text-color);
+
+  &::after {
+    content: attr(data-text);
+    visibility: hidden;
+    @include text-xs--bold;
+  }
 }
 
 :host([checked]) {
   .sbb-toggle-option {
+    @include text-xs--bold;
+
     background-color: white;
+    color: var(--sbb-color-charcoal-default);
   }
 }
