feat: css toggle

--- a/src/components/sbb-toggle-option/sbb-toggle-option.scss
+++ b/src/components/sbb-toggle-option/sbb-toggle-option.scss
@@ -3,7 +3,7 @@
 @include host-component-properties;
 
 :host {
-  --sbb-toggle-option-text-color: inherit;
+  flex-grow: var(--sbb-toggle-option-flex-grow);
 }
 
 :host input[type='radio'] {
@@ -13,14 +13,13 @@
 .sbb-toggle-option {
   @include text-xs--regular;
 
-  --sbb-toggle-option-text-color: var(--sbb-color-anthracite-default);
-
   display: flex;
   cursor: pointer;
-  padding-inline: var(--sbb-spacing-responsive-xxxs);
-  padding-block: var(--sbb-spacing-fixed-1x);
-  border-radius: var(--sbb-border-radius-8x);
+  padding-inline: var(--sbb-toggle-padding-inline);
+  padding-block: var(--sbb-toggle-padding-block);
+  border-radius: var(--sbb-border-radius-16x);
   color: var(--sbb-toggle-option-text-color);
+  justify-content: center;
 
   &::after {
     content: attr(data-text);
@@ -34,6 +33,6 @@
     @include text-xs--bold;
 
     background-color: white;
-    color: var(--sbb-color-charcoal-default);
+    color: var(--sbb-toggle-selected-option-text-color);
   }
 }
