--- a/src/components/sbb-radio-button/sbb-radio-button.scss
+++ b/src/components/sbb-radio-button/sbb-radio-button.scss
@@ -6,7 +6,6 @@
   --sbb-radio-button-label-color: var(--color-black-default);
   --sbb-radio-button-checked-color: var(--sbb-color-red-default);
   --sbb-radio-button-border: var(--sbb-border-width-1x);
-  --sbb-radio-button-border-radius: var(--sbb-border-radius-8x);
   --sbb-radio-button-size: calc(var(--sbb-spacing-fixed-6x) - var(--sbb-radio-button-border) * 2);
 
   // Align radio button to the first row of the label based on the line-height so that it's vertically
@@ -63,7 +62,7 @@
     width: var(--sbb-radio-button-size);
     height: var(--sbb-radio-button-size);
     background: var(--sbb-radio-button-checked-color);
-    border-radius: var(--sbb-radio-button-border-radius);
+    border-radius: 50%;
 
     // The border was used to generate the animation of the radio-button,
     // consequently the box-shadow was used as the actual border of the radio.
