--- a/src/components/sbb-checkbox-group/sbb-checkbox-group.scss
+++ b/src/components/sbb-checkbox-group/sbb-checkbox-group.scss
@@ -2,50 +2,48 @@
 // travel the shadow boundary are defined through this mixin
 @include host-component-properties;
 
+@mixin horizontal-orientation {
+  --sbb-checkbox-group-orientation: row;
+  --sbb-checkbox-group-gap: var(--sbb-spacing-fixed-6x);
+  --sbb-checkbox-group-width: max-content;
+  --sbb-checkbox-group-checkbox-width: auto;
+}
+
 $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
 
 :host {
-  --sbb-checkbox-group-align-items: flex-start;
-  --sbb-checkbox-group-orientation: row;
-  --sbb-checkbox-group-gap: var(--sbb-spacing-fixed-6x);
+  @include horizontal-orientation;
 }
 
 :host([orientation='vertical']) {
   --sbb-checkbox-group-orientation: column;
   --sbb-checkbox-group-gap: var(--sbb-spacing-fixed-3x);
-
-  ::slotted(sbb-checkbox) {
-    width: 100%;
-  }
+  --sbb-checkbox-group-width: 100%;
+  --sbb-checkbox-group-checkbox-width: 100%;
 }
 
 @each $breakpoint in $breakpoints {
   @include mq($from: #{$breakpoint}) {
     // horizontal-from overrides orientation vertical
     :host([orientation='vertical'][horizontal-from='#{$breakpoint}']) {
-      --sbb-checkbox-group-orientation: row;
-      --sbb-checkbox-group-gap: var(--sbb-spacing-fixed-6x);
-
-      ::slotted(sbb-checkbox) {
-        width: auto;
-      }
+      @include horizontal-orientation;
     }
   }
 }
 
 .sbb-checkbox-group {
   display: flex;
-  width: max-content;
   flex-direction: var(--sbb-checkbox-group-orientation);
-  align-items: var(--sbb-checkbox-group-align-items);
   gap: var(--sbb-checkbox-group-gap);
-
-  :host([orientation='vertical']) & {
-    width: 100%;
-  }
+  align-items: flex-start;
+  width: var(--sbb-checkbox-group-width);
 }
 
 .sbb-checkbox-group__error {
   display: inline-block;
   margin-block-start: var(--sbb-spacing-fixed-1x);
+}
+
+::slotted(sbb-checkbox) {
+  width: var(--sbb-checkbox-group-checkbox-width);
 }
